--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,3 +43,18 @@ body {
     text-wrap: balance;
   }
 }
+
+
+.path .animated {  
+  stroke-dashoffset: 0;
+  animation: dash 3s linear;
+}
+
+@keyframes dash {
+  from {
+    stroke-dashoffset: 1000;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
