--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,15 +45,11 @@ body {
 }
 
 
-.path .animated {  
-  stroke-dashoffset: 0;
-  animation: dash 3s linear;
+.path .animated {    
+  animation: dash 3s linear forwards;
 }
 
 @keyframes dash {
-  from {
-    stroke-dashoffset: 1000;
-  }
   to {
     stroke-dashoffset: 0;
   }
